--- a/chrome_extension/popup.html
+++ b/chrome_extension/popup.html
@@ -8,10 +8,10 @@
 </head>
 
 <body>
-    <h1>Keras Web API test</h1>
     <div role="main">
-        <h3 id="debug-display">(?)</h3>
+        <h3 id="title-display">(?)</h3>
         <h3 id="clickbait-display">(response)</h3>
+        <h3 id="debug-display">(?)</h3>
     </div>
 </body>
 
