--- a/chrome_extension/popup.html
+++ b/chrome_extension/popup.html
@@ -10,7 +10,7 @@
 <body>
     <div role="main">
         <h3 id="title-display">(?)</h3>
-        <h3 id="clickbait-display">(response)</h3>
+        <h3 id="domain-display">(?)</h3>
         <h3 id="debug-display">(?)</h3>
     </div>
 </body>
