Updated chrome extension - it works!

--- a/chrome_extension/popup.html
+++ b/chrome_extension/popup.html
@@ -9,9 +9,18 @@
 
 <body>
     <div role="main">
-        <h3 id="title-display">(?)</h3>
-        <h3 id="domain-display">(?)</h3>
-        <h3 id="debug-display">(?)</h3>
+        
+        <p id="title-display">(?)</p>
+        <small><p id="domain-display">(?)</p></small>
+        <p id="clickbait-display" class="cat_heading">(?)</p>
+        <p id="clickbait-prompt">(...)</p>
+        <p id="profile-display" class="cat_heading" >(?)</p>
+        <p id="profile-prompt">(...)</p>
+        <hr>
+        <small>
+            <p>Debug output:</p>
+            <code id="debug-display">(?)</code>
+        </small>
     </div>
 </body>
 
